# amazon-to-sqlite

./: pyproject.toml  requirements.txt
.github/workflows/: lint.yml
amazon_to_sqlite/: __main__.py  check_book_formats.py  db.py
