[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[options]
packages = ["amazon_to_sqlite"]

[tool.setuptools]
packages = ["amazon_to_sqlite"]

[project]
name = "amazon-to-sqlite"
version = "0.1.0"
description = "Save order history from Amazon.com to a SQLite database."
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Harold Martin", email = "Harold.Martin@gmail.com" },
]
keywords = ["datasette", "amazon", "sqlite", "order"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Framework :: Datasette",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
dependencies = ["requests", "beautifulsoup4"]

[project.optional-dependencies]
lint = ["mypy", "pyroma", "pytest", "ruff", "types-beautifulsoup4", "types-requests"]

[project.scripts]
amazon-to-sqlite = "amazon_to_sqlite.__main__:main"

[project.urls]
Homepage = "https://github.com/hbmartin/amazon-to-sqlite"

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [".bzr", ".direnv", ".eggs", ".git", ".git-rewrite", ".hg", ".ipynb_checkpoints", ".mypy_cache", ".nox", ".pants.d", ".pyenv", ".pytest_cache", ".pytype", ".ruff_cache", ".svn", ".tox", ".venv", ".vscode", "__pypackages__", "_build", "buck-out", "build", "dist", "node_modules", "setup.py", "site-packages", "venv"]

# Same as Black.
line-length = 88
indent-width = 4
target-version = "py311"

lint.select = ["ALL"]
lint.ignore = ["D100", "D101", "D103", "D104", "D105", "D107", "D203", "D213", "S113"]

[tool.ruff.lint.per-file-ignores]
"amazon_to_sqlite/__main__.py" = ["T201"]
"amazon_to_sqlite/check_book_formats.py" = ["T201"]

[tool.ruff.format]
# Same as Black.
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
